--- a/DeepSpeech_train_a_model,_alex.ipynb
+++ b/DeepSpeech_train_a_model,_alex.ipynb
@@ -176,7 +176,7 @@
     {
       "cell_type": "code",
       "source": [
-        "y!pip3 uninstall tensorflow\n",
+        "!pip3 uninstall tensorflow\n",
         "!pip3 install 'tensorflow-gpu==1.15.4'"
       ],
       "metadata": {
